fixing layout bugs

--- a/css/index.css
+++ b/css/index.css
@@ -327,9 +327,9 @@ body {
 	margin-top: auto;
 	margin-bottom: var(--gap-med);
 }
-.featured-news__splide {
+/* .featured-news__splide {
 	width: 85vw;
-}
+} */
 .featured-news__track,
 .featured-news__list {
 	width: 100%;
@@ -479,6 +479,7 @@ body {
 	background-image: url('../images/fire-frame.png');
 	background-size: contain;
 	background-repeat: no-repeat;
+	background-position: center 0;
 }
 @supports (
 	background-image: -webkit-image-set(url('../images/fire-frame.webp') 1x)
@@ -490,11 +491,10 @@ body {
 .game-features__content {
 	display: flex;
 	flex-wrap: nowrap;
-	font-display: column;
-	align-content: center;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 770px;
+	height: 810px;
 	margin: 0 auto;
 }
 .game-features__track {
@@ -1129,6 +1129,7 @@ body {
 	.news-item.article {
 		padding: 80px 80px 100px;
 	}
+
 	.article__img {
 		margin-bottom: 40px;
 	}
